k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-microservice
  namespace: statex-apps
  labels:
    app: catalog-microservice
    managed-by: k8s-migration
spec:
  type: ClusterIP
  selector:
    app: catalog-microservice
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
      name: http
